# Kansas-City-alternative-election-analysis

./: .gitignore  README.md  district-generator-reference.md  pyproject.toml  run.py
configs/: 12_1.json  12_1_IRV.json  12_1_Plurality.json  3_4_STV.json  6_1.json  6_1_IRV.json  6_1_Plurality.json  baseline.json  baseline_real_n_voters.json
data/: kcmo_districts_vtd.gpkg
notebooks/: kcmo_districts.geojson
pipeline/: data_generator.py  data_generator_blocks.py  district_generator.py  profile_generator.py  settings_generator.py  simulate_elections.py  summarize_results.py
pipeline-config/: index.html  instructions.md  server.py
pipeline/utils/: helpers.py
