[project]
name = "kansas-city-alternative-election-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "gerrychain>=0.3.2",
    "gerrytools>=1.2.1",
    "ipykernel>=7.3.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.11.0",
    "votekit>=3.4.0",
]
